external-crates/move/crates/move-compiler/tests/move_check/parser/unexpected_token_after_ability_function_constraint.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unexpected_token_after_ability_function_constraint.move:4:21
  │
4 │     fun foo<T: copy & drop>() {}
  │                     ^
  │                     │
  │                     Unexpected '&'
  │                     Expected one of: '+', '>', or ','

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unexpected_token_after_ability_function_constraint.move:4:21
  │
4 │     fun foo<T: copy & drop>() {}
  │                     ^
  │                     │
  │                     Unexpected '&'
  │                     Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

